--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ html{
 
     text-align: center;
     object-fit: cover;
+    
+
 }
 
 #Us{
@@ -61,6 +63,7 @@ box-shadow: 2px 2px 10px blue;
     border-radius: 10px;
     margin: 20px;
     
+    
 }
 .inside{
     width: 500px;
@@ -71,8 +74,11 @@ box-shadow: 2px 2px 10px blue;
 .red{
     width: 500px;
     border-radius: 10px;
-    margin: 20px
+    margin: 20px;
+    
+    
 }
+/* training*/
 .Support{
     text-shadow: 2px 2px 5px black;
 
