--- a/news.css
+++ b/news.css
@@ -41,7 +41,7 @@ h1{
     object-position: center;
     display: inline-block;
 }
-<<<<<<< HEAD
+
 
 .news-text{
     text-shadow: 2px 2px 20px white;
@@ -52,14 +52,13 @@ h1{
     text-shadow: 2px 2px 20px lightslategrey;
 }
 
-.back :hover{
-    color: white;
 
-=======
+
 span.a:hover {
 color: rgb(173, 23, 23);
 }
 .Back{
     color: white;
->>>>>>> 2fff726 (New version)
+    text-decoration: none;
+
 }
