--- a/news.css
+++ b/news.css
@@ -1,39 +1,44 @@
-body{
+body {
     margin: 0;
-    background-image:linear-gradient(black,white) ;
+    background-image: linear-gradient(black, white);
     align-items: center;
     padding: 20px;
 }
-h1{
+
+h1 {
     color: rgb(255, 255, 255);
     text-align: center;
     text-shadow: 2px 2px 10px white;
 }
-.list{
+
+.list {
     list-style: none;
 }
-.nwes-item{
+
+.nwes-item {
     box-shadow: 2px 2px 20px rgb(66, 16, 160);
     display: inline-block;
-   
+
 }
-.nwes-item img{
-     width: 600px;
+
+.nwes-item img {
+    width: 600px;
     height: 260px;
-    object-fit:cover;
+    object-fit: cover;
     object-position: center;
 }
 
-#nwes-item1{
+#nwes-item1 {
     width: 400px;
     height: 260px;
     display: inline-block;
     box-shadow: 2px 2px 20px rgb(230, 16, 16);
     border-radius: 6px;
-    display: inline-block;
+
 
 }
-#nwes-item1 img{
+
+#nwes-item1 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -42,48 +47,48 @@ h1{
 }
 
 
-.news-text{
+.news-text {
     text-shadow: 2px 2px 20px white;
-    
+
 }
 
-.news-text:active{
-background: #1900ff;
-color: #ff9800;
+.news-text:active {
+    background: #1900ff;
+    color: #ff9800;
 }
 
-.news-text2{
+.news-text2 {
     text-shadow: 2px 2px 20px lightslategrey;
 }
 
 
 
 span.a:hover {
-color: rgb(173, 23, 23);
+    color: rgb(173, 23, 23);
 }
 
 
 header {
-            text-align: center;
-            margin-top: 50px;
-        }
+    text-align: center;
+    margin-top: 50px;
+}
 
-        .back-container {
-            margin-top: 20px;
-        }
+.back-container {
+    margin-top: 20px;
+}
 
-        .back {
-            display: inline-block;
-            padding: 12px 25px;
-            background-color: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: bold;
-            transition: background-color 0.3s, transform 0.2s;
-        }
+.back {
+    display: inline-block;
+    padding: 12px 25px;
+    background-color: #616264;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s;
+}
 
-        .back:hover {
-            background-color: #0056b3;
-            transform: translateY(-2px);
-        }
+.back:hover {
+    background-color: #0056b3;
+    transform: translateY(-2px);
+}
